# share-network-data-science-fundamentals-lecture-1

./: README.md  lecture_1_read_sql.ipynb  lecture_2_sql_join.ipynb  lecture_3_pandas_deep_dive.ipynb  lecture_4_data_visualization.ipynb  lecture_5_machine_learning.ipynb  pyproject.toml  read_sql.ipynb
data/: Track.csv
