[tool.poetry]
name = "sql-tutorial"
version = "0.1.0"
description = ""
authors = ["Amity Aharoni <amity@share-network.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^3.0.0"
openpyxl = "^3.1.5"
jinja2 = "^3.1.6"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
